--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.17.1",
     "bootstrap": "^4.0.0-alpha.6",
     "react": "^16.1.1",
+    "react-bootstrap-table": "^4.2.0",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
