--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.17.1",
     "bootstrap": "^4.0.0-alpha.6",
     "history": "^4.7.2",
+    "material-ui": "^0.20.0",
     "react": "^16.1.1",
     "react-bootstrap-table": "^4.2.0",
     "react-dom": "^16.1.1",
@@ -17,7 +18,8 @@
     "redux": "^3.7.2",
     "redux-form": "^7.2.0",
     "redux-promise": "^0.5.3",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "uuid": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
