--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,12 @@
     "bootstrap": "^4.0.0-alpha.6",
     "history": "^4.7.2",
     "material-ui": "^0.20.0",
+    "moment": "^2.19.4",
     "react": "^16.1.1",
     "react-bootstrap-table": "^4.2.0",
     "react-dom": "^16.1.1",
     "react-icons": "^2.2.7",
+    "react-moment": "^0.6.8",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
