--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "redux-form": "^7.2.0",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
+    "sort-by": "^1.2.0",
     "uuid": "^3.1.0"
   },
   "scripts": {
