Refactor PostIndex, shared components & eslint
1) create shared components folder and Cards shared component
2) move Votes component from components folder to shared folder
3) refactor cards in PostIndex
4) use eslint AirBNB styles and PropTypes

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "history": "^4.7.2",
     "material-ui": "^0.20.0",
     "moment": "^2.19.4",
+    "prop-types": "^15.6.0",
     "react": "^16.1.1",
     "react-bootstrap-table": "^4.2.0",
     "react-dom": "^16.1.1",
